Issue826-WipRegisterEventPluginApplySpanToRouteHandlerAndModelLogic
