# src/handlers/participants.js
@@ -24,6 +24,9 @@
  *****/
 'use strict'
 
+const Enum = require('@mojaloop/central-services-shared').Enum
+const EventSdk = require('@mojaloop/event-sdk')
+const LibUtil = require('../lib/util')
 const participants = require('../domain/participants')
 
 /**
@@ -37,10 +40,17 @@ module.exports = {
    * produces: application/json
    * responses: 202, 400, 401, 403, 404, 405, 406, 501, 503
    */
-  post: function (req, h) {
+  post: async function (req, h) {
+    const span = req.span
+    const spanTags = LibUtil.getSpanTags(req, Enum.Events.Event.Type.PREPARE, Enum.Events.Event.Action.PREPARE)
+    span.setTags(spanTags)
+    await span.audit({
+      headers: req.headers,
+      payload: req.payload
+    }, EventSdk.AuditEventAction.start)
     // Here we call an async function- but as we send an immediate sync response, _all_ errors
     // _must_ be handled by postParticipantsBatch.
-    participants.postParticipantsBatch(req.headers, req.method, req.payload)
+    participants.postParticipantsBatch(req.headers, req.method, req.payload, span)
     return h.response().code(200)
   }
 }
