# src/handlers/participants/{Type}/{ID}.js
@@ -24,6 +24,9 @@
  ******/
 'use strict'
 
+const Enum = require('@mojaloop/central-services-shared').Enum
+const EventSdk = require('@mojaloop/event-sdk')
+const LibUtil = require('../lib/util')
 const participants = require('../../../domain/participants')
 const Logger = require('@mojaloop/central-services-logger')
 const ErrorHandler = require('@mojaloop/central-services-error-handling')
@@ -39,10 +42,17 @@ module.exports = {
    * produces: application/json
    * responses: 202, 400, 401, 403, 404, 405, 406, 501, 503
    */
-  get: function (req, h) {
+  get: async function (req, h) {
+    const span = req.span
+    const spanTags = LibUtil.getSpanTags(req, Enum.Events.Event.Type.PREPARE, Enum.Events.Event.Action.PREPARE)
+    span.setTags(spanTags)
+    await span.audit({
+      headers: req.headers,
+      payload: req.payload
+    }, EventSdk.AuditEventAction.start)
     const metadata = `${req.method} ${req.path}`
     try {
-      participants.getParticipantsByTypeAndID(req.headers, req.params, req.method, req.query)
+      participants.getParticipantsByTypeAndID(req.headers, req.params, req.method, req.query, span)
     } catch (err) {
       Logger.error(`ERROR - ${metadata}: ${err}`)
       throw ErrorHandler.Factory.reformatFSPIOPError(err)
@@ -66,10 +76,17 @@ module.exports = {
    * produces: application/json
    * responses: 202, 400, 401, 403, 404, 405, 406, 501, 503
    */
-  post: function (request, h) {
+  post: async function (request, h) {
+    const span = req.span
+    const spanTags = LibUtil.getSpanTags(req, Enum.Events.Event.Type.PREPARE, Enum.Events.Event.Action.PREPARE)
+    span.setTags(spanTags)
+    await span.audit({
+      headers: req.headers,
+      payload: req.payload
+    }, EventSdk.AuditEventAction.start)
     const metadata = `${request.method} ${request.path}`
     try {
-      participants.postParticipants(request.headers, request.method, request.params, request.payload)
+      participants.postParticipants(request.headers, request.method, request.params, request.payload, span)
     } catch (err) {
       Logger.error(`ERROR - ${metadata}: ${err.stack}`)
       throw ErrorHandler.Factory.reformatFSPIOPError(err)
