# src/interface/api_swagger.json
@@ -21,7 +21,8 @@
         "description": "If there is an error during FSP information creation in the server, the error callback PUT /participants/<ID>/error is used. The <ID> in the URI should contain the requestId that was used for the creation of the participant information.",
         "summary": "ParticipantsByIDAndError",
         "tags": [
-          "participants"
+          "participants",
+          "sampled"
         ],
         "operationId": "ParticipantsByIDAndError",
         "produces": [
@@ -126,7 +127,8 @@
         "description": "The callback PUT /participants/<ID> is used to inform the client of the result of the creation of the provided list of identities.",
         "summary": "ParticipantsByID",
         "tags": [
-          "participants"
+          "participants",
+          "sampled"
         ],
         "operationId": "ParticipantsByIDPut",
         "produces": [
@@ -230,7 +232,8 @@
         "description": "If the server is unable to find, create or delete the associated FSP of the provided identity, or another processing error occurred, the error callback PUT /participants/<Type>/<ID>/error (or PUT /participants/<Type>/<ID>/<SubId>/error) is used.",
         "summary": "ParticipantsErrorByTypeAndID",
         "tags": [
-          "participants"
+          "participants",
+          "sampled"
         ],
         "operationId": "ParticipantsErrorByTypeAndID",
         "produces": [
@@ -338,7 +341,8 @@
         "description": "If the server is unable to find, create or delete the associated FSP of the provided identity, or another processing error occurred, the error callback PUT /participants/<Type>/<ID>/error (or PUT /participants/<Type>/<ID>/<SubId>/error) is used.",
         "summary": "ParticipantsSubIdErrorByTypeAndID",
         "tags": [
-          "participants"
+          "participants",
+          "sampled"
         ],
         "operationId": "ParticipantsSubIdErrorByTypeAndID",
         "produces": [
@@ -490,7 +494,8 @@
         "description": "The HTTP request GET /participants/<Type>/<ID> (or GET /participants/<Type>/<ID>/<SubId>) is used to find out in which FSP the requested Party, defined by <Type>, <ID> and optionally <SubId>, is located (for example, GET /participants/MSISDN/123456789, or GET /participants/BUSINESS/shoecompany/employee1).",
         "summary": "ParticipantsSubIdByTypeAndID",
         "tags": [
-          "participants"
+          "participants",
+          "sampled"
         ],
         "operationId": "ParticipantsSubIdByTypeAndID",
         "produces": [
@@ -571,7 +576,8 @@
         "description": "The callback PUT /participants/<Type>/<ID> (or PUT /participants/<Type>/<ID>/<SubId>) is used to inform the client of a successful result of the lookup, creation, or deletion of the FSP information related to the Party. If the FSP information is deleted, the fspId element should be empty; otherwise the element should include the FSP information for the Party.",
         "summary": "ParticipantsSubIdByTypeAndID",
         "tags": [
-          "participants"
+          "participants",
+          "sampled"
         ],
         "operationId": "ParticipantsSubIdByTypeAndID3",
         "produces": [
@@ -668,7 +674,8 @@
         "description": "The HTTP request POST /participants/<Type>/<ID> (or POST /participants/<Type>/<ID>/<SubId>) is used to create information in the server regarding the provided identity, defined by <Type>, <ID>, and optionally <SubId> (for example, POST /participants/MSISDN/123456789 or POST /participants/BUSINESS/shoecompany/employee1).",
         "summary": "ParticipantsSubIdByTypeAndID",
         "tags": [
-          "participants"
+          "participants",
+          "sampled"
         ],
         "operationId": "ParticipantsSubIdByTypeAndIDPost",
         "produces": [
@@ -766,7 +773,8 @@
         "description": "The HTTP request DELETE /participants/<Type>/<ID> (or DELETE /participants/<Type>/<ID>/<SubId>) is used to delete information in the server regarding the provided identity, defined by <Type> and <ID>) (for example, DELETE /participants/MSISDN/123456789), and optionally <SubId>. This HTTP request should support a query string to delete FSP information regarding a specific currency only. To delete a specific currency only, the HTTP request DELETE /participants/<Type>/<ID>?currency=XYZ should be used, where XYZ is the requested currency. Note -  The Account Lookup System should verify that it is the Party’s current FSP that is deleting the FSP information.",
         "summary": "ParticipantsSubIdByTypeAndID",
         "tags": [
-          "participants"
+          "participants",
+          "sampled"
         ],
         "operationId": "ParticipantsSubIdByTypeAndID2",
         "produces": [
@@ -887,7 +895,8 @@
         "description": "The HTTP request GET /participants/<Type>/<ID> (or GET /participants/<Type>/<ID>/<SubId>) is used to find out in which FSP the requested Party, defined by <Type>, <ID> and optionally <SubId>, is located (for example, GET /participants/MSISDN/123456789, or GET /participants/BUSINESS/shoecompany/employee1).",
         "summary": "ParticipantsByTypeAndID",
         "tags": [
-          "participants"
+          "participants",
+          "sampled"
         ],
         "operationId": "ParticipantsByTypeAndID",
         "produces": [
@@ -965,7 +974,8 @@
         "description": "The callback PUT /participants/<Type>/<ID> (or PUT /participants/<Type>/<ID>/<SubId>) is used to inform the client of a successful result of the lookup, creation, or deletion of the FSP information related to the Party. If the FSP information is deleted, the fspId element should be empty; otherwise the element should include the FSP information for the Party.",
         "summary": "ParticipantsByTypeAndID",
         "tags": [
-          "participants"
+          "participants",
+          "sampled"
         ],
         "operationId": "ParticipantsByTypeAndID3",
         "produces": [
@@ -1059,7 +1069,8 @@
         "description": "The HTTP request POST /participants/<Type>/<ID> (or POST /participants/<Type>/<ID>/<SubId>) is used to create information in the server regarding the provided identity, defined by <Type>, <ID>, and optionally <SubId> (for example, POST /participants/MSISDN/123456789 or POST /participants/BUSINESS/shoecompany/employee1).",
         "summary": "ParticipantsByIDAndType",
         "tags": [
-          "participants"
+          "participants",
+          "sampled"
         ],
         "operationId": "ParticipantsByIDAndType",
         "produces": [
@@ -1154,7 +1165,8 @@
         "description": "The HTTP request DELETE /participants/<Type>/<ID> (or DELETE /participants/<Type>/<ID>/<SubId>) is used to delete information in the server regarding the provided identity, defined by <Type> and <ID>) (for example, DELETE /participants/MSISDN/123456789), and optionally <SubId>. This HTTP request should support a query string to delete FSP information regarding a specific currency only. To delete a specific currency only, the HTTP request DELETE /participants/<Type>/<ID>?currency=XYZ should be used, where XYZ is the requested currency. Note -  The Account Lookup System should verify that it is the Party’s current FSP that is deleting the FSP information.",
         "summary": "ParticipantsByTypeAndID",
         "tags": [
-          "participants"
+          "participants",
+          "sampled"
         ],
         "operationId": "ParticipantsByTypeAndID2",
         "produces": [
@@ -1234,7 +1246,8 @@
         "description": "The HTTP request POST /participants is used to create information in the server regarding the provided list of identities. This request should be used for bulk creation of FSP information for more than one Party. The optional currency parameter should indicate that each provided Party supports the currency",
         "summary": "Participants",
         "tags": [
-          "participants"
+          "participants",
+          "sampled"
         ],
         "operationId": "Participants1",
         "produces": [
@@ -1377,7 +1390,8 @@
         "description": "The HTTP request GET /parties/<Type>/<ID> (or GET /parties/<Type>/<ID>/<SubId>) is used to lookup information regarding the requested Party, defined by <Type>, <ID> and optionally <SubId> (for example, GET /parties/MSISDN/123456789, or GET /parties/BUSINESS/shoecompany/employee1).",
         "summary": "PartiesByTypeAndID",
         "tags": [
-          "parties"
+          "parties",
+          "sampled"
         ],
         "operationId": "PartiesByTypeAndID",
         "produces": [
@@ -1455,7 +1469,8 @@
         "description": "The callback PUT /parties/<Type>/<ID> (or PUT /parties/<Type>/<ID>/<SubId>) is used to inform the client of a successful result of the Party information lookup.",
         "summary": "PartiesByTypeAndID2",
         "tags": [
-          "parties"
+          "parties",
+          "sampled"
         ],
         "operationId": "PartiesByTypeAndID2",
         "produces": [
@@ -1568,7 +1583,8 @@
         "description": "If the server is unable to find Party information of the provided identity, or another processing error occurred, the error callback PUT /parties/<Type>/<ID>/error (or PUT /parties/<Type>/<ID>/<SubId>/error) is used.",
         "summary": "PartiesErrorByTypeAndID",
         "tags": [
-          "parties"
+          "parties",
+          "sampled"
         ],
         "operationId": "PartiesErrorByTypeAndID",
         "produces": [
@@ -1717,7 +1733,8 @@
         "description": "The HTTP request GET /parties/<Type>/<ID> (or GET /parties/<Type>/<ID>/<SubId>) is used to lookup information regarding the requested Party, defined by <Type>, <ID> and optionally <SubId> (for example, GET /parties/MSISDN/123456789, or GET /parties/BUSINESS/shoecompany/employee1).",
         "summary": "PartiesSubIdByTypeAndID",
         "tags": [
-          "parties"
+          "parties",
+          "sampled"
         ],
         "operationId": "PartiesSubIdByTypeAndID",
         "produces": [
@@ -1798,7 +1815,8 @@
         "description": "The callback PUT /parties/<Type>/<ID> (or PUT /parties/<Type>/<ID>/<SubId>) is used to inform the client of a successful result of the Party information lookup.",
         "summary": "PartiesSubIdByTypeAndID",
         "tags": [
-          "parties"
+          "parties",
+          "sampled"
         ],
         "operationId": "PartiesSubIdByTypeAndIDPut",
         "produces": [
@@ -1911,7 +1929,8 @@
         "description": "If the server is unable to find Party information of the provided identity, or another processing error occurred, the error callback PUT /parties/<Type>/<ID>/error (or PUT /parties/<Type>/<ID>/<SubId>/error) is used.",
         "summary": "PartiesSubIdErrorByTypeAndID",
         "tags": [
-          "parties"
+          "parties",
+          "sampled"
         ],
         "operationId": "PartiesSubIdErrorByTypeAndID",
         "produces": [
